Optimize image build
Signed-off-by: YanzheL <lee.yanzhe@yanzhe.org>